# todoapp

./: pyproject.toml
.github/workflows/: main.yml
ci/: Dockerfile  commit_stage.py  unittest.py
tests/: test_task.py
tests/helpers/: __init__.py
todoapp/: task.py
