[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Martin Algañaraz <idcmardelplata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-watch = "^4.2.0"
dagger-io = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
